# Makefile_

./: README.md
AutoConf_/: HelloWorld.c  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  helloworld
AutoConf_/autom4te.cache/: output.0  requests  traces.0  traces.1
EasyMakefile_/: HelloWorld.cpp  Main.cpp  Makefile  main
NormalMakefile_/: Makefile
NormalMakefile_/include/: HelloWorld.h
